# LenaXaiLiveKit

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: codeql.yml
docs/: README.md  lena-agent.md  livekit-cloud-deploy.md  operations-runbook.md  security-secrets.md  telnyx-livekit-setup.md  troubleshooting.md
lena/: Dockerfile  README.md  agent.py  langgraph_workflow.py  livekit.toml  orchestrator_graph.py  prompt.py  pyproject.toml  realtime_settings.py  secrets.env.example
lena/tests/: conftest.py  test_orchestrator_graph.py  test_realtime_settings.py
mxagent/: README.md  livekit.toml  pyproject.toml
mxagent/.claude/: SESSION-STATE.md
mxagent/src/: agent.py
